# intp-widget

./: .gitignore  README.md  package-lock.json  package.json  start.html
.github/workflows/: build-android.yml  build.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/intp/widget/: INTPWidget.kt  INTPWidgetReceiver.kt  MainActivity.kt  ModeData.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml  widget_background.xml  widget_preview.xml
android/app/src/main/res/layout/: widget_loading.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: intp_widget_info.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
